bee-common/bee-packable-derive/tests/fail/union.stderr
error: The `Packable` trait cannot be derived for unions.
  --> $DIR/union.rs:13:11
   |
13 | pub union MaybeInt {
   |           ^^^^^^^^
